--- a/playbooks/roles/info_common/tasks/metrics.yaml
+++ b/playbooks/roles/info_common/tasks/metrics.yaml
@@ -1,9 +1,7 @@
 ---
 - name: File metrics port
   delegate_to: localhost
-  throttle: 1
   ansible.builtin.lineinfile:
-    create: yes
-    line: "{{ inventory_hostname }}:{{ metrics_port }}"
+    line: '- targets: ["{{ inventory_hostname }}:{{ metrics_port }}"]'
     path: "{{ tmp_dir }}/all_metrics_port"
-    regex: "^{{ inventory_hostname }}:"
+    regex: '"{{ inventory_hostname }}:'
