--- a/playbooks/roles/info_snowflake/tasks/main.yaml
+++ b/playbooks/roles/info_snowflake/tasks/main.yaml
@@ -1,21 +1,26 @@
 ---
-- name: Connections
-  ansible.builtin.import_tasks: connections.yaml
-  tags:
-    - connections
+- name: Main
+  module_defaults:
+    ansible.builtin.lineinfile:
+      create: yes
+  block:
+    - name: Connections
+      ansible.builtin.import_tasks: connections.yaml
+      tags:
+        - connections
 
-- name: Log proxy
-  ansible.builtin.import_tasks: log-proxy.yaml
-  tags:
-    - log
-    - log-proxy
+    - name: Log proxy
+      ansible.builtin.import_tasks: log-proxy.yaml
+      tags:
+        - log
+        - log-proxy
 
-- name: Uptime
-  ansible.builtin.import_tasks: uptime.yaml
-  tags:
-    - uptime
+    - name: Uptime
+      ansible.builtin.import_tasks: uptime.yaml
+      tags:
+        - uptime
 
-- name: Version of Snowflake
-  ansible.builtin.import_tasks: version.yaml
-  tags:
-    - version
+    - name: Version of Snowflake
+      ansible.builtin.import_tasks: version.yaml
+      tags:
+        - version
