--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -59,3 +59,12 @@
       notify: "Restart Snowflake"
       tags:
         - snowflake
+
+    - name: Force restart of Snowflake
+      changed_when: true
+      ansible.builtin.systemd_service:
+        name: snowflake-proxy
+      notify: "Restart Snowflake"
+      tags:
+        - never
+        - force-restart
