--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -85,3 +85,12 @@
       ansible.builtin.systemd_service:
         name: tor
       notify: "Restart Tor"
+
+    - name: Force restart of Tor
+      changed_when: true
+      ansible.builtin.systemd_service:
+        name: tor
+      notify: "Restart Tor"
+      tags:
+        - never
+        - force-restart
