--- a/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Get proxy logs except clients statistic messages
+- name: Get interesting log entries
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
@@ -8,7 +8,7 @@
         tail -n {{ log_lines }}
   register: _result
 
-- name: Results of log-proxy since {{ log_proxy_since }}
+- name: Results of proxy log since {{ log_proxy_since }}
   when: _result.stdout_lines
   ansible.builtin.debug:
     var: _result.stdout_lines
