grep proxy log for NAT type

--- a/playbooks/roles/info_snowflake/tasks/main.yaml
+++ b/playbooks/roles/info_snowflake/tasks/main.yaml
@@ -9,6 +9,12 @@
       tags:
         - connections
 
+    - name: Log NAT
+      ansible.builtin.import_tasks: log-nat.yaml
+      tags:
+        - log
+        - log-nat
+
     - name: Log proxy
       ansible.builtin.import_tasks: log-proxy.yaml
       tags:
