--- a/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
@@ -4,7 +4,11 @@
   ansible.builtin.shell:
     cmd: |-
       journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
-        grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed' -e 'client connected' |
+        grep -v \
+          -e 'client connected' \
+          -e ' Proxy connection closed' \
+          -e ': sctp ERROR: .* stream 1 not found' \
+          -e  ', there were .* completed connections' |
         tail -n {{ log_lines }}
   register: _result
 
