--- a/playbooks/roles/setup_snowflake/defaults/main.yaml
+++ b/playbooks/roles/setup_snowflake/defaults/main.yaml
@@ -3,6 +3,7 @@ snowflake_build_from_source: true
 snowflake_git_version: "HEAD"
 snowflake_patches: []
 
+# e.g. "-verbose"
 snowflake_command_args: ""
 
 # metrics could expose potential sensitive information
