--- a/playbooks/roles/info_common/tasks/issue.yaml
+++ b/playbooks/roles/info_common/tasks/issue.yaml
@@ -4,7 +4,7 @@
   ansible.builtin.shell:
     cmd: |-
       journalctl --since "{{ log_system_since }}" -q |
-        grep -v 'Speculative Return Stack Overflow: WARNING:' |
+        grep -v -F 'Speculative Return Stack Overflow: WARNING:' |
         grep -F -e 'BUG at' -e 'BUG:' -e 'WARNING:' -e '-----------[ cut here ]------------' |
           while read -r issue; do
             echo "=="
