--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -24,5 +24,5 @@ firewall_use_ddos: false
 # metrics could expose potential sensitive information
 tor_metrics: false
 
-# CPU consuming
+# this is CPU consuming
 torutils_metrics: false
