--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -15,10 +15,10 @@
         - ipv6
         - never
 
-    - name: Issues
-      ansible.builtin.import_tasks: issue.yaml
+    - name: Log Issues
+      ansible.builtin.import_tasks: log-issue.yaml
       tags:
-        - issue
+        - log-issue
 
     - name: Log system
       ansible.builtin.import_tasks: log-system.yaml
