--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,13 +9,13 @@ strategy = ansible.builtin.free
 
 gathering = smart
 inject_facts_as_vars = false
-# keep it parseable
+# text can be easily parsed
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
 remote_user = root
 
-ssh_args = -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes
+ssh_args = -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
 
 # reduce noise
 display_skipped_hosts = false
