--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -140,3 +140,8 @@
       ansible.builtin.import_tasks: auto-update.yaml
       tags:
         - auto-update
+
+    - name: Run a custom command
+      ansible.builtin.import_tasks: custom-command.yaml
+      tags:
+        - custom-command
