--- a/playbooks/roles/setup_tor/tasks/metrics.yaml
+++ b/playbooks/roles/setup_tor/tasks/metrics.yaml
@@ -13,7 +13,8 @@
   ansible.builtin.cron:
     name: "DDoS metrics"
     special_time: reboot
-    job: "nice /root/metrics.sh 60"
+    job: >-
+      nice /root/metrics.sh 60
     state: "{{ torutils_metrics | ternary('present', 'absent') }}"
 
 - name: Getting process IDs of any running metrics script
