--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -122,4 +122,5 @@
   ansible.builtin.cron:
     name: "restart service if systemd refused to do it"
     special_time: hourly
-    job: "systemctl is-failed tor && systemctl start tor"
+    job: >-
+      systemctl is-failed tor && systemctl start tor
