--- a/playbooks/roles/info_tor/tasks/bto.yaml
+++ b/playbooks/roles/info_tor/tasks/bto.yaml
@@ -2,7 +2,7 @@
 - name: Query bto
   ansible.builtin.uri:
     url: "https://bridges.torproject.org/status?id={{ _hashed_fingerprint }}"
-    return_content: yes
+    return_content: true
   register: _result
 
 - name: File bto
