--- a/playbooks/roles/info_snowflake/tasks/main.yaml
+++ b/playbooks/roles/info_snowflake/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: Main
   module_defaults:
     ansible.builtin.lineinfile:
-      create: yes
+      create: true
   block:
     - name: Connections
       ansible.builtin.import_tasks: connections.yaml
