handle unset custom command

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -142,6 +142,7 @@
         - auto-update
 
     - name: Run a custom command
+      when: custom_command
       ansible.builtin.import_tasks: custom-command.yaml
       tags:
         - custom-command
