--- a/playbooks/roles/info_common/tasks/log-issue.yaml
+++ b/playbooks/roles/info_common/tasks/log-issue.yaml
@@ -37,6 +37,7 @@
       register: _config_fname
 
     - name: Download Linux kernel config
+      # fetch defaults to localhost
       throttle: "{{ jobs }}"
       ansible.builtin.fetch:
         src: "{{ _config_fname.stdout }}"
