move vars: towards tasks if used only there

--- a/playbooks/roles/setup_common/tasks/kernel-bin.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-bin.yaml
@@ -1,6 +1,9 @@
 ---
 - name: Install desired Debian kernel flavour
   when: kernel_debian_backports or kernel_debian_cloud
+  vars:
+    _kernel_arch: "{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
+    _kernel_cloud: "{{ kernel_debian_cloud | ternary('-cloud', '') }}"
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}{{ kernel_debian_backports | ternary('-backports', '') }}"
     name:
@@ -9,6 +12,8 @@
 
 - name: Remove non-Cloud kernel
   when: kernel_debian_cloud
+  vars:
+    _kernel_arch: "{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
   ansible.builtin.apt:
     name:
       - "linux-image-{{ _kernel_arch }}"
