not X11 and no agent forward

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -15,7 +15,7 @@ fact_caching_connection = ./.ansible_facts
 
 remote_user = root
 
-ssh_args = -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
+ssh_args = -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
 
 # reduce noise
 display_skipped_hosts = false
