rename ssl_dir into ca_dir

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -12,7 +12,7 @@ facts_subset:
   - "hardware"
 
 # store certificates and more
-ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
+ca_dir: "{{ playbook_dir }}/../secrets/ca"
 
 # local directory for site-info files
 tmp_dir: "{{ lookup('env', 'HOME') }}/tmp"
