no key_usage needed for client certs + restart NGinx after an update instead reload it

--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -10,6 +10,13 @@
     name: ssh
     state: reloaded
 
+- name: Restart Nginx
+  listen: "Restart Nginx"
+  ansible.builtin.systemd_service:
+    name: nginx
+    state: restarted
+    no_block: true
+
 - name: Reload Nginx
   listen: "Reload Nginx"
   ansible.builtin.systemd_service:
